<?xml version="1.0"?>
<package format="2">
  <name>s_velocity_profile_generator</name>
  <version>0.0.0</version>
  <description>The s_velocity_profile_generator package</description>

  <maintainer email="byeongkyu@gmail.com">byeongkyu</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/byeongkyu/s_velocity_profile_generator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
